--- a/Resources.resx
+++ b/Resources.resx
@@ -142,6 +142,14 @@
     <value>icons\install.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
     <comment>install usb gadget</comment>
   </data>
+  <data name="led_green" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>icons\green_led.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <comment>ssh connected</comment>
+  </data>
+  <data name="led_red" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>icons\led_red.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <comment>ssh disconnected</comment>
+  </data>
   <data name="mount" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>icons\connect.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
     <comment>mount usb device</comment>
